--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 NODE_ENV=development
 PORT=8000
 API_TOKEN = "2e58e10e-8752-11ea-bc55-0242ac130003"
+DB_URL="postgresql://dunder_mifflin@localhost/bookmarks"
+TEST_DB_URL="postgresql://dunder_mifflin@localhost/bookmarks-test"
